syntax = "proto3";

package org.hypertrace.span.processing.config.service.v1;

option java_multiple_files = true;

import "org/hypertrace/span/processing/config/service/v1/span_filter.proto";
import "org/hypertrace/span/processing/config/service/v1/sampling_configs.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

service SpanProcessingConfigService {
  rpc CreateExcludeSpanRule(CreateExcludeSpanRuleRequest) returns (CreateExcludeSpanRuleResponse) {}

  rpc UpdateExcludeSpanRule(UpdateExcludeSpanRuleRequest) returns (UpdateExcludeSpanRuleResponse) {}

  rpc GetAllExcludeSpanRules(GetAllExcludeSpanRulesRequest) returns (GetAllExcludeSpanRulesResponse) {}

  rpc DeleteExcludeSpanRule(DeleteExcludeSpanRuleRequest) returns (DeleteExcludeSpanRuleResponse) {}

  rpc CreateApiNamingRule(CreateApiNamingRuleRequest) returns (CreateApiNamingRuleResponse) {}

  rpc UpdateApiNamingRule(UpdateApiNamingRuleRequest) returns (UpdateApiNamingRuleResponse) {}

  rpc GetAllApiNamingRules(GetAllApiNamingRulesRequest) returns (GetAllApiNamingRulesResponse) {}

  rpc DeleteApiNamingRule(DeleteApiNamingRuleRequest) returns (DeleteApiNamingRuleResponse) {}

  rpc CreateIncludeSpanRule(CreateIncludeSpanRuleRequest) returns (CreateIncludeSpanRuleResponse) {}

  rpc UpdateIncludeSpanRule(UpdateIncludeSpanRuleRequest) returns (UpdateIncludeSpanRuleResponse) {}

  rpc GetAllIncludeSpanRules(GetAllIncludeSpanRulesRequest) returns (GetAllIncludeSpanRulesResponse) {}

  rpc DeleteIncludeSpanRule(DeleteIncludeSpanRuleRequest) returns (DeleteIncludeSpanRuleResponse) {}

  rpc CreateSamplingConfig(CreateSamplingConfigRequest) returns (CreateSamplingConfigResponse) {}

  rpc UpdateSamplingConfig(UpdateSamplingConfigRequest) returns (UpdateSamplingConfigResponse) {}

  rpc GetAllSamplingConfigs(GetAllSamplingConfigsRequest) returns (GetAllSamplingConfigsResponse) {}

  rpc DeleteSamplingConfig(DeleteSamplingConfigRequest) returns (DeleteSamplingConfigResponse) {}
}

message CreateExcludeSpanRuleRequest {
  ExcludeSpanRuleInfo rule_info = 1;
}

message CreateExcludeSpanRuleResponse {
  ExcludeSpanRuleDetails rule_details = 1;
}

message GetAllExcludeSpanRulesRequest {}

message GetAllExcludeSpanRulesResponse {
  repeated ExcludeSpanRuleDetails rule_details = 1;
}

message UpdateExcludeSpanRuleRequest {
  UpdateExcludeSpanRule rule = 1;
}

message UpdateExcludeSpanRuleResponse {
  ExcludeSpanRuleDetails rule_details = 1;
}

message DeleteExcludeSpanRuleRequest {
  string id = 1;
}

message DeleteExcludeSpanRuleResponse {}

message ExcludeSpanRule {
  string id = 1;
  ExcludeSpanRuleInfo rule_info = 2;
}

message ExcludeSpanRuleDetails {
  ExcludeSpanRule rule = 1;
  ExcludeSpanRuleMetadata metadata = 2;
}

message ExcludeSpanRuleInfo {
  string name = 1;
  SpanFilter filter = 2;
  bool disabled = 3;
}

message ExcludeSpanRuleMetadata {
  google.protobuf.Timestamp creation_timestamp = 1;
  google.protobuf.Timestamp last_updated_timestamp = 2;
}

message UpdateExcludeSpanRule {
  string id = 1;
  string name = 2;
  SpanFilter filter = 3;
  bool disabled = 4;
}

message CreateApiNamingRuleRequest {
  ApiNamingRuleInfo rule_info = 1;
}

message CreateApiNamingRuleResponse {
  ApiNamingRuleDetails rule_details = 1;
}

message GetAllApiNamingRulesRequest {}

message GetAllApiNamingRulesResponse {
  repeated ApiNamingRuleDetails rule_details = 1;
}

message UpdateApiNamingRuleRequest {
  UpdateApiNamingRule rule = 1;
}

message UpdateApiNamingRuleResponse {
  ApiNamingRuleDetails rule_details = 1;
}

message DeleteApiNamingRuleRequest {
  string id = 1;
}

message DeleteApiNamingRuleResponse {}

message ApiNamingRule {
  string id = 1;
  ApiNamingRuleInfo rule_info = 2;
}

message ApiNamingRuleDetails {
  ApiNamingRule rule = 1;
  ApiNamingRuleMetadata metadata = 2;
}

message ApiNamingRuleInfo {
  string name = 1;
  SpanFilter filter = 2;
  ApiNamingRuleConfig rule_config = 3;
  bool disabled = 4;
}

message UpdateApiNamingRule {
  string id = 1;
  string name = 2;
  SpanFilter filter = 3;
  ApiNamingRuleConfig rule_config = 4;
  bool disabled = 5;
}

message ApiNamingRuleConfig {
  oneof rule_config {
    SegmentMatchingBasedConfig segment_matching_based_config = 1;
  }
}

message SegmentMatchingBasedConfig {
  repeated string regexes = 1;
  repeated string values = 2;
}

message ApiNamingRuleMetadata {
  google.protobuf.Timestamp creation_timestamp = 1;
  google.protobuf.Timestamp last_updated_timestamp = 2;
}


message CreateIncludeSpanRuleRequest {
  IncludeSpanRuleInfo rule_info = 1;
}

message CreateIncludeSpanRuleResponse {
  IncludeSpanRuleDetails rule_details = 1;
}

message GetAllIncludeSpanRulesRequest {}

message GetAllIncludeSpanRulesResponse {
  repeated IncludeSpanRuleDetails rule_details = 1;
}

message UpdateIncludeSpanRuleRequest {
  UpdateIncludeSpanRule rule = 1;
}

message UpdateIncludeSpanRuleResponse {
  IncludeSpanRuleDetails rule_details = 1;
}

message DeleteIncludeSpanRuleRequest {
  string id = 1;
}

message DeleteIncludeSpanRuleResponse {}

message IncludeSpanRule {
  string id = 1;
  IncludeSpanRuleInfo rule_info = 2;
}

message IncludeSpanRuleDetails {
  IncludeSpanRule rule = 1;
  IncludeSpanRuleMetadata metadata = 2;
}

message IncludeSpanRuleInfo {
  string name = 1;
  SpanFilter filter = 2;
  bool disabled = 3;
}

message IncludeSpanRuleMetadata {
  google.protobuf.Timestamp creation_timestamp = 1;
  google.protobuf.Timestamp last_updated_timestamp = 2;
}

message UpdateIncludeSpanRule {
  string id = 1;
  string name = 2;
  SpanFilter filter = 3;
  bool disabled = 4;
}

message GetAllSamplingConfigsRequest {}

message GetAllSamplingConfigsResponse {
  repeated SamplingConfigDetails sampling_config_details = 1;
}

message CreateSamplingConfigRequest {
  SamplingConfigInfo sampling_config_info = 1;
}

message CreateSamplingConfigResponse {
  SamplingConfigDetails sampling_config_details = 1;
}

message UpdateSamplingConfigRequest {
  UpdateSamplingConfig sampling_config = 1;
}

message UpdateSamplingConfigResponse {
  SamplingConfigDetails sampling_config_details = 1;
}

message UpdateSamplingConfig {
  string id = 1;
  RateLimitConfig rate_limit_config = 2;
  SpanFilter filter = 3;
}

message DeleteSamplingConfigRequest {
  string id = 1;
}

message DeleteSamplingConfigResponse {}
